# arch-council

./: .env.example  .gitignore  README.md  arch-councilresponse2.txt  councilterminalresponse.txt  program.md  pyproject.toml  requirements.txt  setup.ps1  start.ps1  start.sh
backend/: config.py  council.py  main.py  models.py  rag.py  ratchet.py  scorer.py
docs/: index.html
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: CouncilView.jsx  FinalReport.jsx  MarkdownWithMermaid.jsx  MermaidDiagram.jsx  RatchetLog.jsx  RequirementForm.jsx  SessionList.jsx
knowledge/: ingest.py  sources.py
